profiling-using-exp-runner/backup_FINAL_RESULTS/lemmatization_experiment/run_2_repetition_0/energibridge.log
sampling interval: 200, target function: lemmatization_lru_cache, input size: Running quickly, the children played happily in the sunny park, unaware of the approaching storm.
  File "<string>", line 1
    import sys; import os; import numpy as np; import spacy; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import cpu.lemmatization as module; nlp = spacy.load(en_core_web_sm); sentence = Running quickly, the children played happily in the sunny park, unaware of the approaching storm.; module.lemmatization_lru_cache(nlp, sentence)
                                                                             ^
SyntaxError: invalid syntax
Energy consumption in joules: 7.71301808166504 for 0.23020783 sec of execution.
